--- a/TODO.txt
+++ b/TODO.txt
@@ -5,3 +5,4 @@
 [_]	Low	Fix the window size
 [_]	Med	GIF : Finir la conversion propre en parcourant la palette pour trouver la couleur clef
 [_]	Med	GIF : Remâcher l'image générée pour remplacer (avec moiré?) la couche alpha par une couleur pure pour la conversion
+[_]	Med	Fichiers : Utiliser une vraie fonction pour avoir le nom du fichier, pas un hack dégueux
